feature: users can edit/delete only their data

--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -10,6 +10,7 @@
 </head>
 <body>
 <input id="configVal" type="hidden" value="{{{ json config }}}">
+<input id="user-data" type="hidden" data-value="{{user}}">
 {{{body}}}
 <script src="/bundle.js"></script>
 </body>
